textova dokumentacia na sosko dokoncena - pridat obrazky

--- a/sosko_dokumentacia/main.tex
+++ b/sosko_dokumentacia/main.tex
@@ -1,4 +1,5 @@
 \documentclass[12pt,twoside]{report}
+% pouzijeme utf8x namiesto utf8, aby nam isli rozne specialne znaky ako napr. ->
 \usepackage[utf8]{inputenc}
 \usepackage[slovak]{babel}
 \usepackage{graphicx}
