--- a/sosko_dokumentacia_testovacia/main.tex
+++ b/sosko_dokumentacia_testovacia/main.tex
@@ -1,47 +1,29 @@
-% Zakladne parametre a jazyk dokumentu
 \documentclass[12pt,twoside]{report}
+% pouzijeme utf8x namiesto utf8, aby nam isli rozne specialne znaky ako napr. ->
 \usepackage[utf8]{inputenc}
 \usepackage[slovak]{babel}
-
-% Obrazky
 \usepackage{graphicx}
 \graphicspath{ {images/} }
-
-% Uloz obrazok tam, kde je deklarovany - nie tam, kde si latex zmysli (na vrch stranky, na novu stranku a tak)
-\usepackage[section]{placeins}
-
-% Cislovanie obrazkov a tabuliek
-\usepackage{chngcntr}
-%Cisluj obrazky nezavisle od cisla kapitol/podkapitol
-\counterwithout{figure}{chapter}
-\counterwithout{table}{chapter}
-
-% Formatovanie strany
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage[a4paper,width=150mm,top=25mm,bottom=25mm,bindingoffset=6mm]{geometry}
-
-% Hlavicka a pata
-
 \usepackage{fancyhdr}
 \pagestyle{fancy}
-\fancyhead{}
+%\fancyhead{}
 %\fancyhead[RO,LE]{Implementácia firemnej siete}
 %\fancyfoot{}
 %\fancyfoot[LE,RO]{\thepage}
-%\fancyfoot[LO,CE]{Kapitola \thechapter}
+%\fancyfoot[LO,CE]{Chapter \thechapter}
 %\fancyfoot[CO,RE]{Author Name}
 %\renewcommand{\headrulewidth}{0.4pt}
 %\renewcommand{\footrulewidth}{0.4pt}
 
-% Bibliografia
 \usepackage[style=authoryear,sorting=none]{biblatex}
 \addbibresource{references.bib}
 
-% Metadata
 \title{Implementácia firemnej siete}
 \author{Andrej Hucík, Miroslav Kozák, Andrej Šišila}
-\date{26.2. 2017}
+\date{Day Month Year}
 
 \begin{document}
 
@@ -64,6 +46,16 @@
 
 \chapter{Topológia siete}
 \input{chapters/topologia_siete}
+
+\begin{figure}[!ht]
+\includegraphics[scale=0.5]{general_logicka_topologia}
+\caption{sample text}
+\label{fig:foo}
+\end{figure}
+
+
+
+
 
 \chapter{Linux}
 \input{chapters/linux}
