este pridat hucikovu cast + obrazky + revizia

--- a/sosko_dokumentacia/main.tex
+++ b/sosko_dokumentacia/main.tex
@@ -3,6 +3,9 @@
 \usepackage[utf8]{inputenc}
 \usepackage[slovak]{babel}
 
+% Aby som mohol davat priamu rec
+\usepackage{dirtytalk}
+
 % Obrazky
 \usepackage{graphicx}
 \graphicspath{ {images/} }
